# desidulate

./: .gitignore  Dockerfile.sidplayfp  LICENSE  README.md  build.sh  desidulate-pipeline.dia  fileio.py  genallresample.py  gensidinfo.py  indexssfs.py  info2vsid.py  matchssf.py  mididemux.py  reg2log.py  reg2midi.py  reg2ssf.py  reg2wav.py  requirements.txt  resamplessf.py  setup.cfg  sidinfoargs.py  sidlib.py  sidmidi.py  sidreg.py  sidwav.py  ssf.py  ssf2midi.py  ssf2nssf.py  ssf2swi.py  ssf2thumb.py  ssf2wav.py  test-requirements.txt  test_sidlib.py  test_sidwav.py  test_ssf.py  test_swi.py
.github/workflows/: periodic.yml  release.yml  test.yml
desidulate/: fileio.py  gensidinfo.py  getsidinfo.py  indexssf.py  reg2ssf.py  reg2wav.py  resamplessf.py  sidinfo.py  sidinfo2dumpcmd.py  sidinfoargs.py  sidlib.py  sidmidi.py  sidwav.py  sidwrap.py  ssf.py  ssf2midi.py  ssf2swi.py  ssf2wav.py  swilib.py
docs/: desidulate-pipeline.dia
magenta/: Dockerfile
tests/: e2e.sh  test_sidinfo.py  test_sidlib.py  test_sidwav.py  test_ssf.py  test_swi.py
utils/: genallresample.py  gensidinfo.py  getsidinfo.py  info2vsid.py  matchssf.py  mididemux.py  plotwav.sh  resamplessf.py  rsindex.py  sidinfoargs.py
