[metadata]
name = desidulate 
author = Josh Bailey
author-email = josh@vandervecken.com
description = C64/SID tune decompiler
url = https://github.com/anarkiwi/desidulate
platform = any
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Unix

[files]
packages =
    desidulate 

[entry_points]
console_scripts =
    reg2ssf = desidulate.reg2ssf:main
    reg2wav = desidulate.reg2wav:main
    ssf2wav = desidulate.ssf2wav:main
    ssf2midi = desidulate.ssf2midi:main
    ssf2swi = desidulate.ssf2swi:main
